app/src/main/java/com/example/bookclub/errors/StudyCommentLikeAlreadyExistedException.java
package com.example.bookclub.errors;

public class StudyCommentLikeAlreadyExistedException extends RuntimeException {
	public StudyCommentLikeAlreadyExistedException() {
		super("StudyCommentLike Already Existed");
	}
}
